sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/Asset_Requisition__c.object-meta.xml
<CustomObject>
    <description>This object keeps records of requisitions for assets</description>
    <label>Asset Requisition</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Asset Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>