sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Asset_status__c.field-meta.xml
<CustomField>
    <fullName>Asset_status__c</fullName>
    <description>Whether the asset has been issued</description>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Not Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>