sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Assets_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Assets_Issuance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the requisition to an issuance</description>
    <label>Assets Issuance</label>
    <referenceTo>Sanergy_Assets_Issuance__c</referenceTo>
    <relationshipLabel>Asset Requisitions</relationshipLabel>
    <relationshipName>Asset_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>