sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date when the asset is being requested to be given</description>
    <label>Date From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>