sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <description>The date when the asset was issued</description>
    <label>Date Issued</label>
    <type>DateTime</type>
</CustomField>