sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>The date when the asset being requested will be returned.</description>
    <label>Date To</label>
    <type>DateTime</type>
</CustomField>