sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The items which are being requested for.</description>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>