sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The duration for which the asset is being requested for</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
                <default>true</default>
                <label>Long Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>