sfSandBoxCode/force-app/main/default/objects/Asset_Requisition__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The specific employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Requisitions</relationshipLabel>
    <relationshipName>Asset_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>